--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "framer-motion": "^12.18.1",
+    "lucide-react": "^0.518.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
