--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "animate.css": "^4.1.1",
     "class-variance-authority": "^0.7.1",
