--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "animate.css": "^4.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
